feat(java): comprehensive enhancement of entire curriculum
Senior module (15-senior):
- Filled 118 README files with real content
- Added interview questions, pitfalls, examples, internal working
- Enhanced architecture, production, performance sections

New module (16-modern-java):
- Records, Sealed Classes, Pattern Matching
- Text Blocks, Switch Expressions, var Type Inference
- Help Commands, Multi-catch, instanceof Pattern, Record Patterns
- 120 new files

Enhanced modules:
- 10-jvm-internals: JMH benchmarks, JFR, profiling examples
- 14-logging: Logback configuration deep-dive
- 12-testing: Test doubles taxonomy (stubs, mocks, fakes, spies, dummies)

Total: 500+ enhanced files