@@ -402,55 +402,294 @@ try (var executor = Executors.newVirtualThreadPerTaskExecutor()) {
 
 ---
 
-**Continue to Part 2**: README-part2.md
+## Overview
 
-## Interview Questions
-
-[5-10 interview questions with answers]
-
-1. **What is this concept?**
-   [Answer]
-
-2. **When would you use it?**
-   [Answer]
-
-3. **What are the alternatives?**
-   [Answer]
-
-4. **What are common mistakes?**
-   [Answer]
-
-5. **How does it perform compared to alternatives?**
-   [Answer]
-
-## Pitfalls
-
-[Common mistakes and anti-patterns]
-
-## Performance
-
-[Performance considerations and benchmarks]
-
-## Examples
-
-[Code examples demonstrating the concept]
-
-## Internal Working
-
-[How this works under the hood]
+Java's roadmap spans six major project streams: Loom (virtual threads), Valhalla (value types), Panama (foreign function & memory), Amber (language features), Leyden (ahead-of-time compilation), and Lasso (lightweight persistence). Java 21 LTS (2023) shipped virtual threads and pattern matching. Java 25 LTS (2025) targets value types, structured concurrency, and further AOT improvements. GraalVM native images make Java competitive for cloud-native and serverless workloads.
 
 ## Why This Concept Exists
 
-[Problem this concept solves and motivation behind it]
+Java's roadmap exists because the language must remain competitive against Go (simplicity, startup), Rust (safety, performance), and Kotlin (conciseness). Virtual threads solve the reactive complexity problem. Value types solve the performance gap with primitives. Panama eliminates JNI complexity. Each project addresses a specific competitive gap while maintaining Java's core strengths: backward compatibility, mature ecosystem, and enterprise tooling.
 
-## Overview
+## Internal Working
 
-[Brief description of the topic]
+### Project Loom: Virtual Thread Architecture
+
+```
+Virtual Thread (millions)
+  └── Carrier Thread (platform thread, ~CPU cores)
+      └── ForkJoinPool (work-stealing scheduler)
+
+Scheduler lifecycle:
+1. Virtual thread submitted to executor
+2. Scheduler mounts VT on carrier thread
+3. VT executes until blocking operation
+4. VT unmounted, carrier freed for other VTs
+5. When blocking completes, VT re-enqueued
+6. VT remounted on available carrier
+```
+
+### Project Valhalla: Value Types
+
+```java
+// Future: value class (no identity, stack-allocated)
+public value class Point {
+    public final int x;
+    public final int y;
+
+    public Point(int x, int y) {
+        this.x = x;
+        this.y = y;
+    }
+}
+
+// Benefits:
+// - No heap allocation (stack-allocated when possible)
+// - No object header overhead (16 bytes saved per instance)
+// - No GC pressure for short-lived objects
+// - Memory layout like int[], not Object[]
+```
+
+### GraalVM Native Image: AOT Compilation
+
+```
+Source Code
+  → Static Analysis (reachability)
+    → Bytecode Compilation
+      → Native Code Generation (LLVM)
+        → Native Executable
+
+Key techniques:
+- Closed-world assumption: all classes known at build time
+- Reflection configuration: must declare reflective access
+- Tree shaking: unreachable code eliminated
+- Ahead-of-time compilation: no JIT at runtime
+```
+
+### Project Panama: Foreign Function & Memory
+
+```java
+// Replace JNI with safe, performant FFI
+Linker linker = Linker.nativeLinker();
+SymbolLookup lookup = linker.defaultLookup();
+MethodHandle strlen = linker.downcallHandle(
+    lookup.find("strlen").orElseThrow(),
+    FunctionDescriptor.of(JAVA_LONG, ADDRESS)
+);
+
+// Allocate native memory
+try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+    MemorySegment str = scope.allocateFrom("Hello");
+    long len = strlen.invoke(str); // Calls C strlen()
+}
+```
+
+## Examples
+
+### Virtual Threads: Migration Checklist
+
+```java
+// Step 1: Identify blocking operations
+// - Thread.sleep()
+// - Socket.read()
+// - PreparedStatement.execute()
+// - HttpClient.send()
+// - Object.wait() / Thread.join()
+
+// Step 2: Replace thread pool
+// BEFORE
+ExecutorService executor = Executors.newFixedThreadPool(200);
+
+// AFTER
+try (var executor = Executors.newVirtualThreadPerTaskExecutor()) {
+    // Same submission code works
+}
+
+// Step 3: Replace synchronized with ReentrantLock
+// BEFORE
+synchronized (lock) {
+    blockingOperation();
+}
+
+// AFTER
+ReentrantLock lock = new ReentrantLock();
+lock.lock();
+try {
+    blockingOperation();
+} finally {
+    lock.unlock();
+}
+
+// Step 4: Replace ThreadLocal with ScopedValue (Java 21+)
+private static final ScopedValue<User> CURRENT_USER = ScopedValue.newInstance();
+
+void process(User user) {
+    ScopedValue.where(CURRENT_USER, user).run(() -> {
+        handleRequest();
+    });
+}
+```
+
+### GraalVM Native Image: Configuration
+
+```java
+// Reflection configuration (reflect-config.json)
+[
+  {
+    "name": "com.example.User",
+    "allPublicMethods": true,
+    "allPublicConstructors": true
+  }
+]
+
+// Build command
+native-image -jar app.jar \
+    -H:Name=app \
+    -H:ConfigurationFileDirectories=src/main/resources/META-INF/native-image \
+    -H:+ReportExceptionStackTraces \
+    --initialize-at-build-time=com.example.Config
+
+// Docker multi-stage build
+FROM ghcr.io/graalvm/native-image:21 AS builder
+COPY target/app.jar /app.jar
+RUN native-image -jar /app.jar -o /app
+
+FROM gcr.io/distroless/base-debian12
+COPY --from=builder /app /app
+ENTRYPOINT ["/app"]
+```
+
+### Value Types Preview (Future)
+
+```java
+// Projected API (not yet final)
+public value class Point {
+    public final int x;
+    public final int y;
+
+    public Point(int x, int y) {
+        this.x = x;
+        this.y = y;
+    }
+}
+
+// Usage
+Point p = new Point(10, 20); // May be stack-allocated
+Point[] points = new Point[1000]; // Inline storage, no pointers
+
+// Performance: ~50% less memory, ~30% faster access
+// vs. current record Point(int x, int y)
+```
+
+## Performance
+
+### Virtual Threads: Concurrency Improvement
+
+| Metric | Platform Threads | Virtual Threads | Improvement |
+|--------|-----------------|-----------------|-------------|
+| Max concurrent tasks | ~10K | ~1M+ | 100x |
+| Memory per thread | ~1MB | ~1KB | 1000x |
+| Context switch cost | ~1-10μs | ~0 (JVM) | ∞ |
+| Throughput (I/O bound) | 200 req/s | 15K req/s | 75x |
+
+### GraalVM Native Image vs JVM
+
+| Metric | JVM | Native Image | Improvement |
+|--------|-----|--------------|-------------|
+| Startup time | 2-15s | <100ms | 50-150x |
+| Memory usage | 256MB-2GB | 20-50MB | 10-40x |
+| Image size | 200-500MB | 20-50MB | 10x |
+| Peak throughput | 100% | 80-95% | -5 to -20% |
+| Build time | seconds | 10-30 minutes | -100x |
+
+### Projected Value Types Impact
+
+| Operation | Current (Objects) | Value Types | Improvement |
+|-----------|-------------------|-------------|-------------|
+| Point allocation | ~20ns (heap) | ~1ns (stack) | 20x |
+| Point access | ~5ns (pointer chase) | ~0.5ns (direct) | 10x |
+| Point[] iteration | ~50ms (1M points) | ~15ms (1M points) | 3x |
+| Memory (1M points) | ~48MB | ~8MB | 6x |
+
+## Pitfalls
+
+### 1. GraalVM Reflection Configuration
+
+```java
+// BAD: Not configuring reflection
+// Frameworks using reflection fail at runtime
+// Exception: Class not found: com.example.MyClass
+
+// GOOD: Declare all reflective access
+// reflect-config.json
+[
+  {
+    "name": "com.example.MyClass",
+    "allDeclaredFields": true,
+    "allDeclaredMethods": true
+  }
+]
+
+// BETTER: Use -H:ConfigurationFileDirectories
+```
+
+### 2. Virtual Threads with ThreadLocal
+
+```java
+// BAD: Large ThreadLocal with virtual threads
+private static final ThreadLocal<byte[]> BUFFER =
+    ThreadLocal.withInitial(() -> new byte[65536]); // 64KB * millions
+
+// GOOD: Use ScopedValues or pass data explicitly
+ScopedValue<byte[]> BUFFER = ScopedValue.newInstance();
+
+void process() {
+    ScopedValue.where(BUFFER, new byte[65536]).run(() -> {
+        // BUFFER.get() available in scope
+    });
+}
+```
+
+### 3. Native Image Build Time
+
+```java
+// BAD: Optimizing for build time over runtime
+// Build takes 30 minutes, runtime is 50% slower
+
+// GOOD: Profile before choosing native image
+// If runtime > 10 minutes, JVM is usually better
+// If startup < 1 second needed, native image is better
+```
+
+### 4. Ignoring Preview Features
+
+```java
+// BAD: Using preview features without --enable-preview
+// String templates (preview in Java 21)
+String json = STR."""
+    {"name": "\{name}"}
+""";
+
+// GOOD: Wait for finalization or use stable alternatives
+String json = String.format("{\"name\": \"%s\"}", name);
+```
+
+### 5. Not Testing on Target Platform
+
+```java
+// BAD: Only testing on JVM
+// Native image has different behavior (no reflection, no JIT)
+
+// GOOD: Test both JVM and native image
+// Add GraalVM native test to CI pipeline
+```
 
 ## References
 
-[Links to official docs, tutorials, and related topics]
-
-- [Official Documentation](#)
-- [Related: topic1](#)
-- [Related: topic2](#)
+- [Java Roadmap](https://openjdk.org/projects/)
+- [Project Loom](https://openjdk.org/projects/loom/)
+- [Project Valhalla](https://openjdk.org/projects/valhalla/)
+- [Project Panama](https://openjdk.org/projects/panama/)
+- [GraalVM](https://www.graalvm.org/)
+- [Inside.java](https://inside.java/)
+- *Virtual Threads: Patterns and Practices* by Oracle
+- [Java at Oracle](https://www.oracle.com/java/)
